# FFmpegStudy

./: settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/tianshaokai/ffmpegstudy/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
myplayer/: CMakeLists.txt  build.gradle
myplayer/src/main/: AndroidManifest.xml
myplayer/src/main/cpp/: FFmpegPlayer.cpp  android_log.h
myplayer/src/main/java/com/tianshaokai/myplayer/: MyPlayer.java
myplayer/src/main/java/com/tianshaokai/myplayer/util/: Logger.java
